feat: Tests now works at 90% Filters added for deployments Cleanup of useless code